# task-manager-ali-may

./: .env  .gitignore  .pdm-python  LICENSE  README.md  auth.py  config.py  crud.py  database.py  init_db.py  main.py  models.py  pyproject.toml  routes.py  schemas.py  task.db  token_issuer.py
alembic/: env.py
alembic/versions/: 310bbeeafd02_initial_migration.py  aaf32ad87f3a_initial_migration.py
